# hello

./: .clang-format  .gitignore  .releaserc  CMakeLists.txt  Dockerfile  HelloProjConfig.h.in  README.md  build_and_test.bat  hello.cpp  hello2.cpp
.github/workflows/: CD.yml  CI.yml  cmake-single-platform.yml  format.yml
src/basic/: CMakeLists.txt  message.cpp
tests/: test-hello.cpp  test-version.cpp
